--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Ayan</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -21,7 +21,6 @@
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#"><h3>Ayan</h3><span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">My Resume</a>
       <a class="nav-item nav-link" href="#">My Blog</a>
     </div>
