--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <body>
     
     <nav class="navbar fixed-top navbar-dark bg-dark text1">
-  <a class="navbar-brand" href="#">Ayan</a>
+  <a class="navbar-brand" href="#"><img src="https://img.icons8.com/color/35/000000/jake.png"> Ayan</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -240,7 +240,7 @@
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="#">My Resume</a>
+      <a class="nav-item nav-link" href="resume.html">My Resume</a>
       <a class="nav-item nav-link" href="#">My Blog</a>
       <a class="nav-item nav-link" href="projects.html">My Projects</a>
     </div>
