--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     position: absolute;
   }
 </style>
-    <title>Ayan!</title>
+    <title><img src="https://img.icons8.com/color/35/000000/jake.png"> Ayan!</title>
   </head>
 
     
