--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
     position: absolute;
   }
 </style>
-    <title><img src="https://img.icons8.com/color/35/000000/jake.png"> Ayan!</title>
+      <link rel="shortcut icon" href="https://img.icons8.com/color/35/000000/jake.png" />
+      <title>Ayan!</title>
   </head>
 
     
