--- a/blog.html
+++ b/blog.html
@@ -135,10 +135,9 @@
   <div class="row">
     <div style="margin-left: 20px; width: 400px;">
         <a class="navbar-brand" href="#">Contact me: </a>
-      <img src="https://img.icons8.com/color/40/000000/github-2.png">
-        <img src="https://img.icons8.com/color/40/000000/twitter.png">
-        <img src="https://img.icons8.com/color/40/000000/linkedin.png">
-    </div>
+        <a href="https://github.com/ayansh21"><img src="https://img.icons8.com/color/40/000000/github-2.png"></a>
+        <a href="https://twitter.com/AyanBan42065332"><img src="https://img.icons8.com/color/40/000000/twitter.png"></a>
+        <a href="https://www.linkedin.com/in/ayan-banerjee-733b5b16b"><img src="https://img.icons8.com/color/40/000000/linkedin.png"></a>
     </div>                        
 </nav>    
         
